<resources>
    <string name="app_name">WalletLess</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="localization">Localization</string>
    <string name="about">About the application</string>
    <string name="lbl_select_language">Choose language</string>
    <string name="settings_localization_language_title">Language</string>
    <string name="en">English</string>
    <string name="mk">Macedonian</string>b
    <string name="application_name">Application name</string>
    <string name="wallet_less">WalletLess</string>
    <string name="verison">1.0.0</string>
    <string name="version_date">Version date</string>
    <string name="version_date_value">21.4.2022</string>
    <string name="application_developer">Application developer</string>
    <string name="klementina_gjorgieva">Klementina Gjorgieva</string>
    <string name="text_new_request">Hello,\n feel free to request for a new merchant</string>
    <string name="merchant_name">Merchant name here</string>
    <string name="merchant_description">Merchant description here</string>
    <string name="text_receive_email">We are gonna receive your message through email</string>
    <string name="btn_send">Send</string>
    <string name="text_version">Version</string>
    <string name="no_internet">You need to connect to internet</string>
    <string name="btn_add_merchant">Add your merchant</string>
    <string name="search_here">Search here</string>
    <string name="home">Home</string>
    <string name="merchants">Merchants</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="delete_Card">Are you sure you want to delete this card?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="scan_cards">Scan some cards</string>
    <!-- Preference Titles -->
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="support">Support</string>
    <string name="about_the_app">About the app</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- About the app -->
    <string name="name_of_app">Name of application</string>
    <string name="tittle">WalletLess app</string>
    <string name="version">Version</string>
    <string name="date_of_version">Date of version</string>
    <string name="developed_by">Developed by</string>
    <string name="developer">Klementina Gjorgieva</string>

    <!-- Support -->
    <string name="call">Call us</string>
    <string name="email">Email us</string>

    <string name="rights">All rights reserved</string>
    <string name="settings_app">App configuration</string>
    <string name="login">login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password</string>
    <string name="register">No account yet? Create one</string>
    <string name="new_client">Become our client</string>
    <string name="enter_username">Enter username</string>
    <string name="register_user">Register user</string>


</resources>