<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <PreferenceCategory-->
<!--        -->
<!--        app:key="settigns"-->
<!--        app:icon="@drawable/ic_settings_applications"-->
<!--        app:title="@string/settings_app"/>-->

    <PreferenceCategory app:title="@string/language">

        <ListPreference
            app:defaultValue="English"
            app:icon="@drawable/ic_language"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="language"
            app:title="@string/lbl_select_language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/privacy_policy"
        >
        <Preference

            app:key="privacy_policy"
            app:icon="@drawable/ic_privacy_policy"
            app:title="@string/privacy_policy"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/support">

        <Preference
            app:key="email"
            app:icon="@drawable/ic_email"
            app:title="@string/email"/>

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/about_the_app"
        >

        <Preference
            app:key="name_app"
            app:icon="@drawable/ic_name_app"
            app:summary="@string/tittle"
            app:title="@string/name_of_app"/>

        <Preference
            app:key="version"
            app:icon="@drawable/ic_version"
            app:summary=""
            app:title="@string/version"/>

        <Preference
            app:key="date_version"
            app:icon="@drawable/ic_date_version"
            app:summary="@string/app_version_date"
            app:title="@string/date_of_version"/>

    </PreferenceCategory>


</PreferenceScreen>